# FastAPI-Project2-Python

./: README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: base.py  connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 120b1a127ece_add_categories_table.py  85eddded3c15_add_products_table.py  8a2ac2600658_add_categories_table.py  bf863919351e_add_categories_table.py
app/routes/: category_routes.py  deps.py  product_routes.py
app/schemas/: base.py  category.py  product.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py  test_product_routes.py
app/test/schemas/: test_category_schema.py  test_product_schema.py
app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py
app/use_cases/: category.py  product.py
