[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["alex"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
requests = "^2.31.0"
aiohttp = "^3.8.4"
alembic = "^1.11.1"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.6"
pytest = "^7.4.0"
httpx = "^0.24.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
fastapi-pagination = "^0.12.5"
sqlalchemy = "^2.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"